[workspace]
members = ["bin", "crates/*"]

default-members = ["bin"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xfourzerofour/deployer-of-worlds"

[workspace.dependencies]
alloy = { version = "0.2.0", features = [
  "serde",
  "transport-http",
  "std",
  "contract",
  "providers",
  "rpc-client",
  "rpc-types",
  "rpc-types-eth",
] }
anyhow = "1.0.83"
serde = "1.0.0"
serde_json = "1.0.0"
tokio = { version = "1.37.0", features = ["full"] }
dotenv = "0.15.0"
