[workspace]
members = ["bin/*", "crates/*"]

default-members = ["bin/deployer-of-worlds"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xfourzerofour/deployer-of-worlds"

[workspace.dependencies]
alloy = { version = "1.0.23", features = [
  "serde",
  "transport-http",
  "std",
  "contract",
  "providers",
  "rpc-client",
  "rpc-types",
  "rpc-types-eth",
] }
anyhow = "1.0.83"
serde = "1.0.0"
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }
dotenv = "0.15.0"
thiserror = "1.0"
serde_json = "1.0"
